--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -1,49 +1,88 @@
+.main {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 .contactSection {
-    padding: 4rem 2rem;
-    background: linear-gradient(to bottom left, #ffffff, #ffecb3);
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  
+  flex: 1;
+  padding: 2rem;
+  background: linear-gradient(to bottom left, #ffffff, #aed4ba);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.title {
+  font-size: 2.5rem;
+  margin-bottom: 1.5rem;
+  color: #1abc9c;
+}
+
+.contactForm {
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 1.5rem;
+  border-radius: 12px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 400px;
+  text-align: center;
+}
+
+.emailContact {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #333333;
+}
+
+.copyButton {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  margin-right: 0.5rem;
+}
+
+.emailIcon, .checkIcon {
+  color: #1abc9c;
+  font-size: 1.5rem;
+  transition: color 0.3s ease;
+}
+
+.copyButton:hover .emailIcon {
+  color: #16a085;
+}
+
+.checkIcon {
+  color: #2ecc71;
+}
+
+.emailText {
+  color: #333333;
+  word-break: break-all;
+}
+
+.copiedMessage {
+  margin-top: 0.5rem;
+  color: #2ecc71;
+  font-size: 0.9rem;
+}
+
+@media (max-height: 500px) {
   .title {
-    font-size: 3rem;
-    margin-bottom: 2rem;
-    color: #1abc9c;
+    font-size: 2rem;
+    margin-bottom: 1rem;
   }
-  
+
   .contactForm {
-    background-color: rgba(255, 255, 255, 0.9);
-    padding: 2rem;
-    border-radius: 12px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    max-width: 500px;
-    text-align: center;
+    padding: 1rem;
   }
-  
+
   .emailContact {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: #333333;
+    font-size: 1rem;
   }
-  
-  .emailIcon {
-    margin-right: 0.5rem;
-    color: #1abc9c;
-  }
-  
-  .emailLink {
-    color: #1abc9c;
-    text-decoration: none;
-    transition: color 0.3s ease;
-  }
-  
-  .emailLink:hover {
-    color: #16a085;
-  }
+}
