--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -88,3 +88,30 @@
   margin-bottom: 0.5rem;
 }
 
+.projectHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+
+.projectLinks {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.iconLink {
+  color: inherit;
+  text-decoration: none;
+}
+
+.icon {
+  font-size: 1.5rem;
+}
+
+.projectTitle {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+  margin-bottom: 0.5rem;
+}
