--- a/src/app/projects/projects.module.css
+++ b/src/app/projects/projects.module.css
@@ -1,8 +1,13 @@
+.main {
+  min-height: 100vh;
+  width: 100%;
+  background: linear-gradient(to bottom right, #ffffff, #e0f7fa);
+}
+
 .projectsPage {
-    padding: 4rem 2rem;
-    background: linear-gradient(to bottom right, #ffffff, #e0f7fa);
-    min-height: 100vh;
-  }
+  padding: 4rem 2rem;
+  min-height: 100vh;
+}
   
   .title {
     text-align: center;
